# zstr

./: CMakeLists.txt
cmake/: zstrConfig.cmake.in
include/: strict_fstream.hpp
